--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+Wed Mar 24 21:42:15 1999  J"orn Rennecke <amylaar@cygnus.co.uk>
+
+	reload1.c (choose_reload_regs): If output-reloading for a
+	simple move insn, try to inherit an equivalence for the input.
+
 1999-02-24  Mike Stump  <mrs@wrs.com>
 
 	* arm/aout.h (DBX_OUTPUT_MAIN_SOURCE_FILENAME): Fix quoting.
