--- a/libobjc/ChangeLog
+++ b/libobjc/ChangeLog
@@ -1,3 +1,10 @@
+Wed Mar 24 22:41:28 1999  Mumit Khan  <khan@xraylith.wisc.edu>
+
+	* configure.in (AC_PREREQ): Update to 2.13.
+	(AC_EXEEXT): Call to find possible file extension.
+	(compiler_name): Use.
+	* configure: Regenerate.
+
 Wed Jan 27 02:31:01 1999  Jeffrey A Law  (law@cygnus.com)
 
 	* Makefile.in (ALL_CFLAGS): Add -DIN_GCC.
