--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+Wed Mar 24 22:50:50 1999  Jeffrey A Law  (law@cygnus.com)
+
+	* gcc.c-torture/execute/990324-1.c: New test.
+
 1999-03-13  Craig Burley  <craig@jcb-sc.com>
 
 	* g77.f-torture/execute/19990313-2.f: New test.
