--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+Wed Mar 24 23:24:30 1999  Jeffrey A Law  (law@cygnus.com)
+
+	* fixinc/mkfixinc.sh: Recognize cygwin* instead of only
+	cygwin32.
+
 Wed Mar 24 15:44:12 1999  Nick Clifton  <nickc@cygnus.com>
 
 	* config/m32r/m32r.c (init_idents): Accept both NAME and __NAME__
