--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+Wed Mar 24 23:27:25 1999  Mark Elbrecht  <snowball3@usa.net.
+
+	* i386/djgpp.h: Fix typo.
+
 Wed Mar 24 23:24:30 1999  Jeffrey A Law  (law@cygnus.com)
 
 	* fixinc/mkfixinc.sh: Recognize cygwin* instead of only
