* combine.c (force_to_mode, case PLUS): Use sign extended mask         when masking the low bits out of a constant.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@25964 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+Thu Mar 25 01:15:33 1999  Donn Terry  <donn@interix.com>
+
+	* combine.c (force_to_mode, case PLUS): Use sign extended mask
+	when masking the low bits out of a constant.
+
 Tue Mar 23 15:45:25 1999  Richard Earnshaw (rearnsha@arm.com)
 			  Jeff Law <law@cygnus.com>
 
