--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,8 @@
+1999-03-25  Nathan Sidwell  <nathan@acm.org>
+
+	* decl.c (init_decl_processing): Add `signed' type as a synonym
+	for `int'.
+
 1999-03-25  Jason Merrill  <jason@yorick.cygnus.com>
 
 	* typeck.c (common_type): Handle cv-qual unification for pointers
