Applied patch from Phillip Blundell <pb@nexus.co.uk>:   This patch fixes a couple of Linux-specific problems with profiling and   debugging.  It's against the trunk version.  Without it gdb reports wrong   line numbers and -pg does not work at all.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@25972 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,10 @@
+1999-03-25  Philip Blundell  <pb@nexus.co.uk>
+
+	Based on patch from Jim Studt <jim@federated.com>:
+	* config/arm/linux-elf.h (STARTFILE_SPEC, ENDFILE_SPEC): Copy
+	definitions from config/linux.h.
+	(DBX_BLOCKS_FUNCTION_RELATIVE): Define to 1.
+
 Thu Mar 25 02:12:42 1999  Finn Hakansson  <finn@axis.com>
 
         * rtl.h (MEM_COPY_ATTRIBUTES): Remove unnecessary ending backslash.
