--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+Thu Mar 25 10:05:56 1999  Richard Henderson  <rth@cygnus.com>
+
+	* i386.h (PREFERRED_STACK_BOUNDARY): Set to 128.
+
 1999-03-25  Philip Blundell  <pb@nexus.co.uk>
 
 	Based on patch from Jim Studt <jim@federated.com>:
