* tlink.c (symbol_hash_newfunc): Remove redundant call to 	hash_newfunc. 	(file_hash_newfunc, demangled_hash_newfunc): Likewise.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@25974 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+Thu Mar 25 11:47:49 1999  Art Haas <ahaas@neosoft.com>
+
+	* tlink.c (symbol_hash_newfunc): Remove redundant call to
+	hash_newfunc.
+	(file_hash_newfunc, demangled_hash_newfunc): Likewise.
+
 Thu Mar 25 10:05:56 1999  Richard Henderson  <rth@cygnus.com>
 
 	* i386.h (PREFERRED_STACK_BOUNDARY): Set to 128.
