--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,7 @@
+1999-03-25  Mark Mitchell  <mark@codesourcery.com>
+
+	* pt.c (tsubst_decl): Tsubst into DECL_BEFRIENDING_CLASSES.
+
 1999-03-25  Nathan Sidwell  <nathan@acm.org>
 
 	* decl.c (init_decl_processing): Add `signed' type as a synonym
