* loop.c (strength_reduce): Correct a comment.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@25983 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -40,6 +40,8 @@ Thu Mar 25 10:05:56 1999  Richard Henderson  <rth@cygnus.com>
 
 Thu Mar 25 02:12:42 1999  Finn Hakansson  <finn@axis.com>
 
+	* loop.c (strength_reduce): Correct a comment.
+
         * rtl.h (MEM_COPY_ATTRIBUTES): Remove unnecessary ending backslash.
 
 Thu Mar 25 02:02:13 1999  Axel Thimm <Axel.Thimm@physik.fu-berlin.de>
