* decl2.c (comdat_linkage): Treat vtables like functions.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@25985 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,7 @@
+1999-03-25  Jason Merrill  <jason@yorick.cygnus.com>
+
+	* decl2.c (comdat_linkage): Treat vtables like functions.
+
 1999-03-25  Mark Mitchell  <mark@codesourcery.com>
 
 	* pt.c (tsubst_decl): Tsubst into DECL_BEFRIENDING_CLASSES.
