--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+Thu Mar 25 21:08:02 1999  Jason Merrill  <jason@yorick.cygnus.com>
+
+	* gcc.texi (Temporaries): Update.
+
 Thu Mar 25 16:53:53 1999  Richard Henderson  <rth@cygnus.com>
 
 	* combine.c (distribute_notes): Place REG_LABEL also where
