--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+1999-03-26  Craig Burley  <craig@jcb-sc.com>
+
+	* g77.f-torture/execute/19990325-0.f: New test.
+	* g77.f-torture/execute/19990325-1.f: New test.
+
 Wed Mar 24 22:50:50 1999  Jeffrey A Law  (law@cygnus.com)
 
 	* gcc.c-torture/execute/990324-1.c: New test.
