* gcc.c: Compile unconditionally all code formerly dependent 	on #ifdef LANG_SPECIFIC_DRIVER. 	* gccspec.c: New file with stub lang_specific_driver, 	lang_specific_pre_link. 	* Makefile.in: Link gccspec.o into xgcc.  Add rule to compile 	gccspec.c. 	* cp/Make-lang.in: Remove all references to g++.o/g++.c. 	Link g++ from gcc.o. 	* f/Make-lang.in: Remove all references to g77.o/g77.c. 	Link g77 from gcc.o. 	* java/Make-lang.in: Remove all references to gcj.o/gcj.c. 	Link gcj from gcc.o.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@25989 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/f/ChangeLog
+++ b/gcc/f/ChangeLog
@@ -1,3 +1,8 @@
+1999-03-25  Zack Weinberg  <zack@rabi.columbia.edu>
+
+	* Make-lang.in: Remove all references to g77.o/g77.c.
+	Link g77 from gcc.o.
+
 1999-03-21  Manfred Hollstein  <manfred@s-direktnet.de>
 
 	* Makefile.in (g77$(exeext)): Depend on intl.o.  Link in intl.o.
