--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,8 @@
+1999-03-25  Zack Weinberg  <zack@rabi.columbia.edu>
+
+	* Make-lang.in: Remove all references to g++.o/g++.c.
+	Link g++ from gcc.o.
+
 1999-03-25  Jason Merrill  <jason@yorick.cygnus.com>
 
 	* decl2.c (comdat_linkage): Treat vtables like functions.
