* gcc.texi (Copy Assignment): New node. 	* gxxint.texi: Remove old discussion on copying virtual bases.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@25992 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,4 +1,8 @@
-999-03-25 Zack Weinberg  <zack@rabi.columbia.edu>
+Thu Mar 25 22:53:27 1999  Martin von Löwis  <loewis@informatik.hu-berlin.de>
+
+	* gcc.texi (Copy Assignment): New node.
+
+1999-03-25 Zack Weinberg  <zack@rabi.columbia.edu>
 
 	* gcc.c: Compile unconditionally all code formerly dependent
 	on #ifdef LANG_SPECIFIC_DRIVER.
