--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+Fri Mar 26 11:38:01 1999  Nick Clifton  <nickc@cygnus.com>
+
+	* config/arm/t-arm-elf (EXTRA_MULTILIB_PARTS): Define.
+
 Fri Mar 26 10:48:27 1999  Nick Clifton  <nickc@cygnus.com>
 
 	* config/arm/linux-elf.h: Include dbxelf.h
