Apply patch from Scott Bambrough <scottb@corelcomputer.com>   Modified arm*-*-linux-gnu* target to set thread_file to 'posix' if   --enable-threads, --enable-threads=[yes,pthreads,posix] is passed as a   command line parameter to configure.   Modified TARGET_LIBGCC2_CFLAGS to include -fPIC.  If not included libgcc2   is not compiled with PIC flag, as it should be.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@26000 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,13 @@
+1999-02-16  Scott Bambrough <scottb@corelcomputer.com>
+
+        * configure.in (arm*-*-linux-gnu*): Set thread_file to 'posix' if
+	--enable-threads[={yes,pthreads,posix}] is passed as a command
+	line parameter to configure. 
+
+        * configure: Regenerate.
+	
+        * gcc/config/arm/t-linux (TARGET_LIBGCC2_CFLAGS): Include -fPIC.
+
 Fri Mar 26 19:42:19 1999  J"orn Rennecke <amylaar@cygnus.co.uk>
 
 	* loop.c (combine_givs): Fix index into can_combine when doing
