Just include arm/vxarm.h for arm-vxworks target
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@26001 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+Fri Mar 26 16:02:37 1999  Nick Clifton  <nickc@cygnus.com>
+
+	* configure.in (arm-*-vxworks*): Just include arm/vxarm.h
+	* configure: Regenerate.
+
 1999-02-16  Scott Bambrough <scottb@corelcomputer.com>
 
         * configure.in (arm*-*-linux-gnu*): Set thread_file to 'posix' if
