Define SUBTARGET_CPU_DEFAULT before including arm/coff.h
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@26002 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -2,6 +2,8 @@ Fri Mar 26 16:02:37 1999  Nick Clifton  <nickc@cygnus.com>
 
 	* configure.in (arm-*-vxworks*): Just include arm/vxarm.h
 	* configure: Regenerate.
+	* config/arm/vxarm.h: Define SUBTARGET_CPU_DEFAULT before
+	including arm/coff.h
 
 1999-02-16  Scott Bambrough <scottb@corelcomputer.com>
 
