--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -65,6 +65,9 @@ Fri Mar 26 10:43:47 1999  Nick Clifton  <nickc@cygnus.com>
 
 Fri Mar 26 01:59:15 1999  "Charles M. Hannum" <root@ihack.net>
 
+	* fold-const.c (fold_truthop): Mask the lhs and rhs after merging
+	adjacent bitfield references. 
+
 	* fold-const.c (fold_truthop): Verify that the lhs and rhs are
 	in the same bit position when optimizing bitfield references
 	which have the same mask.
