--- a/libobjc/ChangeLog
+++ b/libobjc/ChangeLog
@@ -1,3 +1,9 @@
+Fri Mar 26 23:41:07 1999 Ovidiu Predescu <ovidiu@cup.hp.com>
+
+	* archive.c (__objc_code_char, __objc_write_char): Explicitly specify
+	the char as being signed (patch from Daniel Jacobowitz
+	<drow@false.org>).
+
 Wed Mar 24 22:41:28 1999  Mumit Khan  <khan@xraylith.wisc.edu>
 
 	* configure.in (AC_PREREQ): Update to 2.13.
