* gcc.cps, cpp.cps: Delete unwanted files.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@26029 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+Sun Mar 28 00:44:27 1999  Jeffrey A Law  (law@cygnus.com)
+
+	* gcc.cps, cpp.cps: Delete unwanted files.
+
 Sat Mar 27 23:37:40 EST 1999  John Wehle  (john@feith.com)
 
 	* i386.md (movdicc+3, movdicc+4): Rewrite using split_di.
