* lib/objc-torture.exp: Replace "77" with "Obj-C" in pattern         matching strings.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@26030 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+Sun Mar 28 00:49:41 1999  Jeffrey A Law  (law@cygnus.com)
+
+	* lib/objc-torture.exp: Replace "77" with "Obj-C" in pattern
+	matching strings.
+
 Fri Mar 26 00:50:46 1999  Jeffrey A Law  (law@cygnus.com)
 
 	* gcc.c-torture/execute/990326-1.c: New test from Charles Hannum.
