--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+Sun Mar 28 15:27:26 1999  Jeffrey A Law  (law@cygnus.com)
+
+	* reload1.c (reload): Remove accidental code duplication.
+
 Sun Mar 28 12:22:12 1999  Robert Lipe  (robertlipe@usa.net)
 
 	* i386/sysv5.h: New file to describe UnixWare7/SVR5.
