--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+Sun Mar 28 16:09:01 1999  "Jerry Quinn" <jquinn@nortelnetworks.com>
+
+	* pa.c (pa_adjust_cost): Don't do cost adjustments on pa8000.
+	(pa_reorg): Don't call pa_combine_instructions on pa8000.
+
 Sun Mar 28 15:27:26 1999  Jeffrey A Law  (law@cygnus.com)
 
 	* reload1.c (reload): Remove accidental code duplication.
