Warning fixes:         * recog.h (insn_outfun, insn_operand_predicate): Add prototype         arguments.         * rtl.h (note_stores): Likewise.         * rtlanal.c (note_stores): Likewise.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@26045 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,12 @@
+Sun Mar 28 20:26:55 1999  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
+
+	* recog.h (insn_outfun, insn_operand_predicate): Add prototype
+	arguments.
+
+	* rtl.h (note_stores): Likewise.
+
+	* rtlanal.c (note_stores): Likewise.
+
 Sun Mar 28 15:34:28 1999  Richard Henderson  <rth@cygnus.com>
 
 	* varasm.c (output_constant_pool): Always mark the constant pool.
