--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,7 @@
+1999-03-28  Jason Merrill  <jason@yorick.cygnus.com>
+
+	* pt.c (fn_type_unification): Ignore 'this' parm from conversion ops.
+
 1999-03-27  Mark Mitchell  <mark@codesourcery.com>
 
 	* cp-tree.h (add_friend): Declare.
