portability fix & release announcement update
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@26053 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+Mon Mar 29 08:24:43 1999  Bruce Korb <korb@datadesign.com>
+
+	* fixinc/mkfixinc.sh:  Heredoc portability problem
+
+	* fixinc/README:  Updated for release announcement
+
 Sun Mar 28 20:26:55 1999  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
 
 	* recog.h (insn_outfun, insn_operand_predicate): Add prototype
